--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lab Pemrograman — Profile</title>
+<title>Praktikum Fisika Komputasi</title>
+<link rel="icon" type="image/png" href="logo_akn.png">
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;600;700&family=Syne:wght@400;600;700;800&display=swap" rel="stylesheet">
 <style>
   :root {
@@ -999,4 +1000,5 @@
   reveals.forEach(r => io.observe(r));
 </script>
 </body>
+
 </html>
