--- a/index.html
+++ b/index.html
@@ -384,6 +384,39 @@
   .module-card:hover { background: #151d30; }
   .module-card:hover::before { transform: scaleX(1); }
 
+  .module-card-foot {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: auto;
+  padding-top: 0.5rem;
+  gap: 0.5rem;
+  }
+  .module-dl {
+    font-family: 'JetBrains Mono', monospace;
+    font-size: 0.58rem;
+    font-weight: 600;
+    padding: 0.35rem 0.75rem;
+    background: transparent;
+    border: 1px solid #1e2535;
+    color: #5a6478;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    gap: 0.3rem;
+    transition: all 0.2s;
+    white-space: nowrap;
+  }
+  .module-dl:hover {
+    border-color: #00f5a0;
+    color: #00f5a0;
+    background: rgba(0, 245, 160, 0.05);
+  }
+  .module-dl.unavailable {
+    opacity: 0.28;
+    pointer-events: none;
+  }
+
   .module-num {
     font-family: 'JetBrains Mono', monospace;
     font-size: 0.65rem;
@@ -451,7 +484,7 @@
   .schedule-item {
     background: var(--card);
     display: grid;
-    grid-template-columns: 80px 1fr 1fr auto;
+    grid-template-columns: 80px 1fr auto auto auto;
     align-items: center;
     padding: 1.2rem 2rem;
     gap: 2rem;
@@ -472,6 +505,22 @@
     font-size: 0.72rem;
     color: var(--muted);
   }
+
+  .schedule-dl {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 0.58rem; font-weight: 600;
+  padding: 0.32rem 0.7rem;
+  background: transparent;
+  border: 1px solid #1e2535;
+  color: #5a6478;
+  text-decoration: none;
+  display: inline-flex; align-items: center; gap: 0.3rem;
+  transition: all 0.2s;
+  white-space: nowrap;
+  }
+  .schedule-dl:hover { border-color: #00f5a0; color: #00f5a0; background: rgba(0,245,160,0.05); }
+  .schedule-dl.unavailable { opacity: 0.25; pointer-events: none; }
+
   .badge {
     font-family: 'JetBrains Mono', monospace;
     font-size: 0.62rem;
@@ -913,81 +962,121 @@
 <!-- MODUL -->
 <section id="modul">
   <div class="section-tag">// 01 — MATERI</div>
-  <h2 class="section-title reveal">Modul Praktikum</h2>
-  <p class="section-desc reveal">Setiap modul dirancang sistematis, dari konsep dasar hingga implementasi nyata menggunakan bahasa pemrograman modern.</p>
+  <h2 class="section-title">Modul Praktikum</h2>
+  <p class="section-desc">Setiap modul dirancang sistematis, dari konsep dasar hingga implementasi nyata menggunakan bahasa pemrograman modern.</p>
 
-  <div class="modules-grid reveal">
+  <div class="modules-grid">
+
     <div class="module-card">
       <div class="module-num">MODULE_01</div>
       <span class="module-icon">⚙️</span>
       <div class="module-title">Review Differensial Numerik dan PDB</div>
-      <div class="module-desc">Instalasi tools, mengenal IDE, dan menulis program Hello World pertamamu.</div>
-      <span class="module-tag">INTRO</span>
+      <div class="module-desc">Recall Differensial Numerik (Forward-Backward-Center) dan Persamaan Differensial Biasa (Euler-Runge Kutta-4).</div>
+      <div class="module-card-foot">
+        <span class="module-tag">RECALL</span>
+        <a class="module-dl" href="https://github.com/aslabfiskom-dev/web-PhysCom/blob/main/All_worksheet_module/Modul%201.pdf" target="_blank">↓ PDF</a>
+      </div>
     </div>
+
     <div class="module-card">
       <div class="module-num">MODULE_02</div>
       <span class="module-icon">📦</span>
       <div class="module-title">Uji Stabilitas Numerik</div>
       <div class="module-desc">Memahami tipe data primitif, deklarasi variabel, dan konversi tipe dalam pemrograman.</div>
-      <span class="module-tag">FUNDAMENTAL</span>
+      <div class="module-card-foot">
+        <span class="module-tag">FUNDAMENTAL</span>
+        <a class="module-dl" href="https://raw.githubusercontent.com/USERNAME/REPO/main/modul/modul-02.pdf" target="_blank">↓ PDF</a>
+      </div>
     </div>
+
     <div class="module-card">
       <div class="module-num">MODULE_03</div>
       <span class="module-icon">🔀</span>
       <div class="module-title">Metode Eksplisit vs Implisit</div>
       <div class="module-desc">Percabangan if-else, switch-case, dan logika kondisional dalam program.</div>
-      <span class="module-tag">LOGIC</span>
+      <div class="module-card-foot">
+        <span class="module-tag">LOGIC</span>
+        <a class="module-dl" href="https://raw.githubusercontent.com/USERNAME/REPO/main/modul/modul-03.pdf" target="_blank">↓ PDF</a>
+      </div>
     </div>
+
     <div class="module-card">
       <div class="module-num">MODULE_04</div>
       <span class="module-icon">🔁</span>
       <div class="module-title">Fenomena Fisis - Gerak Peluru</div>
       <div class="module-desc">Menguasai for loop, while, do-while, dan teknik iterasi data secara efisien.</div>
-      <span class="module-tag">LOOP</span>
+      <div class="module-card-foot">
+        <span class="module-tag">PHENOMENA</span>
+        <a class="module-dl" href="https://raw.githubusercontent.com/USERNAME/REPO/main/modul/modul-04.pdf" target="_blank">↓ PDF</a>
+      </div>
     </div>
+
     <div class="module-card">
       <div class="module-num">MODULE_05</div>
       <span class="module-icon">🧩</span>
-      <div class="module-title">Fenomena Fisis - Sistem Osilasi & Chaos</div>
+      <div class="module-title">Fenomena Fisis - Sistem Osilasi</div>
       <div class="module-desc">Modularisasi kode dengan fungsi, parameter, nilai kembalian, dan scope variabel.</div>
-      <span class="module-tag">FUNCTION</span>
+      <div class="module-card-foot">
+        <span class="module-tag">PHENOMENA</span>
+        <a class="module-dl" href="https://raw.githubusercontent.com/USERNAME/REPO/main/modul/modul-05.pdf" target="_blank">↓ PDF</a>
+      </div>
     </div>
+
     <div class="module-card">
       <div class="module-num">MODULE_06</div>
       <span class="module-icon">📋</span>
       <div class="module-title">Monte Carlo - Bilangan Acak</div>
       <div class="module-desc">Penggunaan array 1D dan 2D, operasi traversal, dan pengenalan struktur data dasar.</div>
-      <span class="module-tag">ARRAY</span>
+      <div class="module-card-foot">
+        <span class="module-tag">RANDOMNESS</span>
+        <a class="module-dl" href="https://raw.githubusercontent.com/USERNAME/REPO/main/modul/modul-06.pdf" target="_blank">↓ PDF</a>
+      </div>
     </div>
+
     <div class="module-card">
       <div class="module-num">MODULE_07</div>
       <span class="module-icon">🏗️</span>
       <div class="module-title">Review PDP dan Persamaan Laplace - Poisson</div>
       <div class="module-desc">Konsep kelas, objek, atribut, metode, dan enkapsulasi dalam pemrograman berorientasi objek.</div>
-      <span class="module-tag">OOP</span>
+      <div class="module-card-foot">
+        <span class="module-tag">ELLIPTIK</span>
+        <a class="module-dl" href="https://raw.githubusercontent.com/USERNAME/REPO/main/modul/modul-07.pdf" target="_blank">↓ PDF</a>
+      </div>
     </div>
+
     <div class="module-card">
       <div class="module-num">MODULE_08</div>
       <span class="module-icon">🚀</span>
-      <div class="module-title">Persamaan Difusi-Parabolic</div>
+      <div class="module-title">Persamaan Difusi - Parabolic</div>
       <div class="module-desc">Implementasi seluruh konsep dalam proyek nyata: membangun aplikasi sederhana yang fungsional.</div>
-      <span class="module-tag">PROJECT</span>
+      <div class="module-card-foot">
+        <span class="module-tag">PARABOLIC</span>
+        <a class="module-dl" href="https://raw.githubusercontent.com/USERNAME/REPO/main/modul/modul-08.pdf" target="_blank">↓ PDF</a>
+      </div>
     </div>
+
     <div class="module-card">
       <div class="module-num">MODULE_09</div>
       <span class="module-icon">🔗</span>
-      <div class="module-title">Persamaan Gelombang-Hiperbolic</div>
+      <div class="module-title">Persamaan Gelombang - Hiperbolic</div>
       <div class="module-desc">Deskripsi modul 9 di sini.</div>
-      <span class="module-tag">TAG</span>
+      <div class="module-card-foot">
+        <span class="module-tag">HIPERBOLIK</span>
+        <a class="module-dl unavailable" href="#">↓ PDF</a>
+      </div>
     </div>
 
     <div class="module-card">
       <div class="module-num">MODULE_10</div>
       <span class="module-icon">🎯</span>
-      <div class="module-title">Nama Modul 10</div>
+      <div class="module-title">Projek Tugas Akhir</div>
       <div class="module-desc">Deskripsi modul 10 di sini.</div>
-      <span class="module-tag">TAG</span>
+      <div class="module-card-foot">
+        <span class="module-tag">PROJECT</span>
+        <a class="module-dl unavailable" href="#">↓ PDF</a>
+      </div>
     </div>
+
   </div>
 </section>
 
@@ -1014,55 +1103,69 @@
   </div>
 </section>
 
-<!-- JADWAL -->
 <section id="jadwal">
   <div class="section-tag">// 03 — TIMELINE</div>
-  <h2 class="section-title reveal">Jadwal Praktikum</h2>
-  <p class="section-desc reveal">Pertemuan dilaksanakan setiap Rabu pukul 13.00–15.00 WIB di Lab Komputer Gedung B.</p>
+  <h2 class="section-title">Jadwal Praktikum</h2>
+  <p class="section-desc">Pertemuan dilaksanakan setiap Rabu pukul 13.00–15.00 WIB di Lab Komputer Gedung B.</p>
 
-  <div class="schedule-list reveal">
+  <div class="schedule-list">
+
     <div class="schedule-item">
       <span class="schedule-week">WEEK 01</span>
-      <div><div class="schedule-title">Pengantar & Setup</div><div class="schedule-sub">orientasi + instalasi</div></div>
-      <span class="schedule-date">5 Feb 2025</span>
+      <div><div class="schedule-title">Review Differensial Numerik dan PDB</div><div class="schedule-sub">Review Praktikum Komputasi Numerik</div></div>
+      <span class="schedule-date">4-5-6 Maret 2026</span>
       <span class="badge badge-done">SELESAI</span>
+      <a class="schedule-dl" href="https://github.com/aslabfiskom-dev/web-PhysCom/blob/main/All_worksheet_module/Worksheet_M01.ipynb" target="_blank">↓ Worksheet</a>
     </div>
+
     <div class="schedule-item">
       <span class="schedule-week">WEEK 02</span>
       <div><div class="schedule-title">Variabel & Tipe Data</div><div class="schedule-sub">modul 02</div></div>
       <span class="schedule-date">12 Feb 2025</span>
       <span class="badge badge-done">SELESAI</span>
+      <a class="schedule-dl" href="https://raw.githubusercontent.com/USERNAME/REPO/main/modul/modul-02.pdf" target="_blank">↓ Worksheet</a>
     </div>
+
     <div class="schedule-item">
       <span class="schedule-week">WEEK 03</span>
       <div><div class="schedule-title">Struktur Kontrol</div><div class="schedule-sub">modul 03</div></div>
       <span class="schedule-date">19 Feb 2025</span>
       <span class="badge badge-active">AKTIF</span>
+      <a class="schedule-dl" href="https://raw.githubusercontent.com/USERNAME/REPO/main/modul/modul-03.pdf" target="_blank">↓ Worksheet</a>
     </div>
+
     <div class="schedule-item">
       <span class="schedule-week">WEEK 04</span>
       <div><div class="schedule-title">Perulangan</div><div class="schedule-sub">modul 04</div></div>
       <span class="schedule-date">26 Feb 2025</span>
       <span class="badge badge-upcoming">UPCOMING</span>
+      <a class="schedule-dl unavailable" href="#">↓ Worksheet</a>
     </div>
+
     <div class="schedule-item">
       <span class="schedule-week">WEEK 05</span>
       <div><div class="schedule-title">Fungsi & Prosedur</div><div class="schedule-sub">modul 05</div></div>
       <span class="schedule-date">5 Mar 2025</span>
       <span class="badge badge-upcoming">UPCOMING</span>
+      <a class="schedule-dl unavailable" href="#">↓ Worksheet</a>
     </div>
+
     <div class="schedule-item">
       <span class="schedule-week">WEEK 06</span>
       <div><div class="schedule-title">Array & Struktur Data</div><div class="schedule-sub">modul 06</div></div>
       <span class="schedule-date">12 Mar 2025</span>
       <span class="badge badge-upcoming">UPCOMING</span>
+      <a class="schedule-dl unavailable" href="#">↓ Worksheet</a>
     </div>
+
     <div class="schedule-item">
       <span class="schedule-week">WEEK 07</span>
       <div><div class="schedule-title">Ujian Tengah Semester</div><div class="schedule-sub">evaluasi 50%</div></div>
       <span class="schedule-date">19 Mar 2025</span>
-      <span class="badge badge-upcoming">UPCOMING</span>
+      <span class="badge badge-uts">UTS</span>
+      <a class="schedule-dl unavailable" href="#">↓ Worksheet</a>
     </div>
+
   </div>
 </section>
 
